update a couple stream operation terminators